--- a/app/ui/home/topnav.module.css
+++ b/app/ui/home/topnav.module.css
@@ -12,6 +12,7 @@
 
 .hamBurger {
   background: var(--hamburger-menu);
+  width: 100vw;
 }
 
 .logoSection {
@@ -21,5 +22,5 @@
 
   justify-content: space-between;
   align-items: center;
-  width: 100vh;
+  /* width: 100vw; */
 }
