--- a/app/ui/dashboard/dashboard.module.css
+++ b/app/ui/dashboard/dashboard.module.css
@@ -8,6 +8,7 @@
 
 .tableColor:hover {
   background-color: var(--selected-icon-bg);
+  cursor: pointer;
 }
 
 .td {
@@ -28,5 +29,13 @@
 }
 
 .unselectedIcon {
+  color: var(--selected-icon);
+}
+
+.eventClass {
+  background-color: var(--selected-icon);
+}
+
+.eventText {
   color: var(--selected-icon);
 }
