--- a/app/ui/dashboard/dashboard.module.css
+++ b/app/ui/dashboard/dashboard.module.css
@@ -60,3 +60,92 @@
 .customEventOfMonthHeight {
   height: 23vh;
 }
+
+.filterContainer {
+  background-color: #fff;
+  width: 60vh;
+  height: 30vh;
+  right: 0;
+  border: 2px solid var(--selected-icon);
+}
+
+.test {
+  border: 4px solid black;
+  background-color: #fff;
+}
+
+.fieldColor {
+  background-color: #fff;
+
+  border: 2px solid var(--selected-icon);
+}
+
+.fieldColor:hover {
+  cursor: pointer;
+}
+
+.modalWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #50505065;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.modal {
+  min-width: 30vw;
+  min-height: 50vh;
+
+  max-width: 75vw;
+  background: white;
+  border-radius: 5px;
+  display: flex;
+  background-position: center;
+  align-items: center;
+  justify-content: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  position: relative;
+  animation: fadeInDown 0.8s;
+}
+
+.btnClose {
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  top: 10px;
+  color: black;
+  right: 10px;
+  font-size: 3vh;
+  cursor: pointer;
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media only screen and (max-width: 992px) {
+}
+
+@media only screen and (max-width: 768px) {
+}
+
+@media only screen and (max-width: 600px) {
+}
+
+.spaceApply {
+  border-bottom: 2px solid var(--unselected-icon);
+}
